:bug: fixes an a flexbox bug in IE.
The bug caused the page contents to not fit within the 100vh body
element, resulting in undesirable vertical scrolling. For details, see:
https://connect.microsoft.com/IE/feedback/details/802625/min-height-and-flexbox-flex-direction-column-dont-work-together-in-ie-10-11-preview

--- a/site/assets/styles.css
+++ b/site/assets/styles.css
@@ -273,8 +273,12 @@ input[type="radio"]:checked + .label-mojs {
       -ms-flex-align: stretch;
           align-items: stretch;
   position: relative;
+
   /* Solves a Firefox issue. See: http://stackoverflow.com/a/29400042/1154642 */
   min-height: 0;
+
+  /* Solves an IE issue. See: https://connect.microsoft.com/IE/feedback/details/802625/min-height-and-flexbox-flex-direction-column-dont-work-together-in-ie-10-11-preview */
+  height: 100%;
 
   -ms-flex-preferred-size: auto;
 
